Unit_2_C_Programming/Lesson 3 C Basics/Assignment 1/.metadata/.plugins/org.eclipse.cdt.ui/Test1.build.log
22:24:42 **** Rebuild of configuration Debug for project Test1 ****
Info: Internal Builder is used for build
gcc -ansi -std=c89 -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:8:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^~~~
..\main.c: In function 'main':
..\main.c:11:2: error: 'for' loop initial declarations are only allowed in C99 or C11 mode
  for(int x ; ;);
  ^~~
..\main.c:11:2: note: use option -std=c99, -std=gnu99, -std=c11 or -std=gnu11 to compile your code
..\main.c:11:10: warning: unused variable 'x' [-Wunused-variable]
  for(int x ; ;);
          ^

22:24:43 Build Finished (took 193ms)

